[package]
name = "rfx"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Command-line utility and pretty JSON viewer"
repository = "https://github.com/shekohex/rfx.git"
readme = "README.md"

[dependencies]
serde_json = "1.0.38"
json-color = "0.7.0"
